--- a/test.html
+++ b/test.html
@@ -51,8 +51,7 @@
 
         <section id="work">
             <h2>Work Experience</h2>
-            <p>He has been involved in internships, but also attempting many business models to accrue generational
-                wealth.</p>
+            <p>He has been involved in internships, but also attempting many business models to accrue generational wealth. Jeiran has been involved in 2 internships. One with NSP (Neighborhood Service Project) and iFp studios (Innovators For Purpose). In iFp I had to build a game where the main character had to escape a school due to the corrupt teachers poisoning the water. In NSP, we conducted surveys and researched how teens are affected by mental health issues in our community.</p>
         </section>
 
         <section id="resume">
@@ -64,7 +63,7 @@
 
         <section id="project">
             <h2>Projects</h2>
-            <p>Jeiran has worked on many projects, especially in his web design class where he built websites and learned lots about it in the process.</p>
+            <p>Jeiran has worked on many projects, especially in his web design class where he built websites and learned lots about it in the process. Jeiran has completed a multitude of projects including a climate change awareness website and a RC car in his arduino class. One of his favorite was also a capture the light game using an arduino and breadboard. It incorporates ones reaction time to press a button at the right time to intercept the blinking light.</p>
             <br>
             <p>Here is a video about how Jeiran build an arduino project with a friend</p>
             <iframe src="https://drive.google.com/file/d/1JWPnnuXdz7swxeLCLhtcdL5_vXS3FR9C/preview" width="100%" frameborder="0" allowfullscreen></iframe>
